2005-01-10  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in: require LIBGTOP >= 2.9.4.

2005-01-10  Davyd Madeley  <davyd@madeley.id.au>

	* m4/system-tools-backends.m4 (added): Add this file to stop the build
	  from breaking. Is there no way to test for macros before we try to
	  use them?

2005-01-09  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in: require LIBGTOP >= 2.9.0.

2005-01-07  Elijah Newren  <newren@gmail.com>

	* configure.in: require LIBPANEL_APPLET >= 2.9.4 (mini-commander
	needs to use new panel_applet_request_focus() API)

2005-01-07  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in: Support for new modemlights (requires
	  gnome-system-tools to build).
	* modemlights/*: Out with the old, in with the new.

2005-01-07  Davyd Madeley  <davyd@madeley.id.au>

	* wireless/.cvsignore (Removed): Missed one ;)

2005-01-06  Mark McLoughlin  <mark@skynet.ie>

	Deprecate the wireless applet in favour of netstatus.

	* Makefile.am, configure.in: don't build wireless dir.
	
	* wireless/*: remove.

2005-01-04  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in: stickynotes now requires libwnck. I accidently
	committed changes to stickynotes last time, so they can stay.

2005-01-04  Davyd Madeley  <davyd@madeley.id.au>

	* cdplayer/*: Removed
	
	* Makefile.am:
	* configure.in: Removed cdplayer from build

	* null_applet/GNOME_NullApplet_Factory.server.in.in:
	* null_applet/null_applet.c: Taught null_applet to remove cdplayers

2005-01-04  Christoffer Olsen  <co@deworks.net>

	* HACKING: Updated it
	* gweather/gweather.schemas.in: Fixed bug #150921

2005-01-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* autogen.sh:
	* configure.in:
	* m4/ac-define-dir.m4:
	  Add AC_DEFINE_DIR, m4 dir, and use it to properly get
	  directories defined in config.h

2005-01-03  Davyd Madeley  <davyd@madeley.id.au>

	* wireless/wireless-applet.c:
	* mixer/applet.c: Fix some file locations.
