@@ -1,3 +1,11 @@
+2005-01-10  Tomasz Kłoczko <kloczek@pld.org.pl>
+
+	* cpufreq/src/Makefile.am:
+	* cpufreq/src/cpufreq-selector/Makefile.am:
+	* gswitchit/Makefile.am:
+	  Remove -Wall -Werror (non-portable options) and not used any more
+	  -I$(top_srcdir)/intl from INCLUDES.
+
 2005-01-10  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* configure.in: require LIBGTOP >= 2.9.4.
